Added JS Class Assignment

--- a/HTML Portfolio/index.html
+++ b/HTML Portfolio/index.html
@@ -49,7 +49,7 @@
             bibendum. Aenean vestibulum sem eu vulputate rhoncus. Aenean vel eros lorem.
         </p>
         <hr>
-        &copy; 2022
+        Copyright &copy; 2022
     </div>
     </div>
 </body>
