Added Material Design Assignment

--- a/JS Form Validation/index.html
+++ b/JS Form Validation/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <form class="form" id="form">
+        <form class="form" id="form" novalidate>
             <div class="form-control">
                 <label for="txtname">Name : </label>
                 <input type="text" name="txtname" id="name" placeholder="Name">
